--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         }
 
         .main-list {
-            padding: 20px;
+            padding: 0;
+            margin: 20px;
         }
 
         .title {
