added csscomb to the project

--- a/index.html
+++ b/index.html
@@ -5,118 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>1</title>
-    <style>
-        body {
-            color: white;
-        }
+    <link href="index.css" rel="stylesheet" type="text/css" />
 
-        table,
-        tr,
-        td {
-            border-spacing: 0;
-            padding: 0;
-            border-collapse: collapse;
-        }
-
-        td {
-            border: 3px dashed #23a4fa;
-        }
-
-        .main-table {
-            margin: auto;
-        }
-
-        .table {
-            background-color: #171d52;
-        }
-
-        .darker-background {
-            background-color: #313131;
-        }
-
-        .middle-table td {
-            border: none;
-        }
-
-        .middle-table td:nth-child(2) {
-            border: 3px dashed #23a4fa;
-            border-top: none;
-            border-bottom: none;
-        }
-
-        .inner-table tr {
-            height: 100%;
-            border: 3px dashed #23a4fa;
-            border-right: none;
-            border-left: none;
-        }
-
-        .inner-table tr:first-child {
-            border-top: none;
-        }
-
-        .inner-table tr:last-child {
-            border-bottom: none;
-        }
-
-        .size-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .gearbox-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .first-column,
-        .third-column {
-            padding: 20px;
-        }
-
-        .main-list {
-            padding: 0;
-            margin: 20px;
-        }
-
-        .title {
-            margin: 0;
-        }
-
-        .align-end {
-            vertical-align: text-bottom;
-        }
-
-        .text1 {
-            font-style: italic;
-            font-size: 20px;
-            color: #23a4fa;
-            text-decoration: underline;
-        }
-
-        .text2 {
-            font-weight: 800;
-            font-size: 15px;
-        }
-
-        .text3 {
-            color: #d7ffd7;
-            font-size: 16px;
-            font-stretch: expanded;
-        }
-
-        .text4 {
-            color: rgb(206, 229, 245);
-            font-stretch: condensed;
-        }
-
-        .text5 {
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            color: #d7ffd7;
-        }
-
-    </style>
+    <title>Passat CC</title>
 </head>
 
 <body>
